--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ body {
 	margin: 0;
 	position:relative;
 }
+ul{
+  -webkit-padding-start: 0;
+  -webkit-margin-before: 0;
+}
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -38,6 +42,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 #footer {
   background-color: #444;
@@ -60,10 +66,11 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1.6rem;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+  line-height: 80px;
 }
 #breadcrumb {
     padding: 10px 40px 16px;
@@ -77,6 +84,7 @@ nav h1 a {
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    font-size: 1.1rem;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -105,17 +113,19 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+  display: flex;
   width: 100%;
-  height: 50px;
+  height: 110px;
   background-color: #3397DB;
   align-items: center;
+  justify-content: center;
 }
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0;
 }
 .filter-options select {
   background-color: white;
@@ -139,13 +149,15 @@ nav h1 a {
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+  display: inline-block;
+  box-shadow: 0px 2px 20px 9px #ddd;
+  border-radius: 4px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -154,6 +166,7 @@ nav h1 a {
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+  margin-top: 26px;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -204,25 +217,33 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: fixed;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
+  margin: 10px 4% 30px 5%;
+  /* padding: 0 0 0 30px; */
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  /* margin: 15px 0 30px; */
   text-transform: uppercase;
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  width: 90%;
+  border-radius: 20px 0px 20px 0px;
+  margin: 0px 4% 0px 5%;
 }
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+  font-size: 1.4rem;
+  margin: 10px 0px 0 30px;
+}
+
+#restaurant-hours {
+  margin: 0px 4% 0px 5%;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -230,11 +251,12 @@ nav h1 a {
   font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
-  margin: 0 0 20px;
+  margin: 10px 4% 20px 5%;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 90%;
+  border-radius: 10px 0px;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
@@ -242,6 +264,13 @@ nav h1 a {
   padding: 140px 40px 30px;
   width: 50%;
 }
+
+#restaurant-container {
+  padding: 140px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+}
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
@@ -263,13 +292,109 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
   width: 85%;
+  border-radius: 15px 0px;
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
   color: #666;
+  font-size: 1rem;
+}
+
+#reviews-list .name {
+  font-size: 1.6rem;
+  margin: 0;
+  color: white;
+  padding: 5px 0 5px 0px;
+}
+
+#reviews-list li div {
+  display: flex;
+  align-items: center;
+  background-color: black;
+  justify-content: space-between;
+  padding: 5px 20px;
+  margin: 0;
+  border-radius: 15px 0px 0px 0px;
+}
+
+#reviews-list .review_date {
+  margin: 0;
+  padding: 5px 0 5px 0px;
+  color: white;
+}
+
+#reviews-list .comment {
+  font-size: 1.3rem;
+  padding: 0px 30px;
+  margin: 15px 0px;
+}
+
+#reviews-list .rating {
+  display: flex;
+  margin: 10px 0px 10px 30px;
+  background-color: orange;
+  width: 100px;
+  border-radius: 3px;
+  font-size: 1.2rem;
+  color: white;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 550px) {
+  nav h1 a {
+    letter-spacing: normal;
+  }
+  .filter-options {
+    display: flex;
+    flex-direction: column;
+    height: 160px;
+  }
+  #restaurants-list {
+    padding: 30px 0px 60px;
+  }
+  .inside #map-container {
+    width: 100%;
+    position: relative;
+    top: 130px;
+    height: 100%;
+    z-index: 1;
+  }
+  #breadcrumb {
+    width: 100%;
+  }
+  #restaurant-container, #reviews-container{
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  #restaurant-img {
+    width: 90%;
+  }
+  #restaurant-cuisine {
+    width: 90%;
+  }
+  #reviews-list li {
+    margin: 10px auto;
+    width: 80%;
+  }
+  #restaurant-hours {
+    margin-left: 16px;
+  }
+  #restaurant-address {
+    margin-left: 16px;
+  }
+  #reviews-container h2 {
+    margin-left: 16px;
+  }
+  #restaurant-name {
+    margin-left: 16px;
+  }
+  .inside #map {
+    height: 260px;
+  }
 }
